Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/FlashySoft/LibFalcon">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/Zefyer/LibFalcon">View on GitHub</a>
 
           <h1 id="project_title">LibFalcon</h1>
           <h2 id="project_tagline">A simple (and incomplete) C/C++ Library to be linked with Hobby Operating System kernels.</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/FlashySoft/LibFalcon/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/FlashySoft/LibFalcon/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/Zefyer/LibFalcon/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/Zefyer/LibFalcon/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -34,7 +34,7 @@
         <h1>
 <a id="libfalcon" class="anchor" href="#libfalcon" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>LibFalcon</h1>
 
-<p><a href="https://github.com/FlashySoft/LibFalcon">LibFalcon</a> is a simple (and incomplete) C library to be linked with Hobby Operating System Kernels. Almost all essential functions required by kernels are provided. (memcpy, strlen, atoi, etc.) However, there are No math functions at this moment. The reason is that I am in 9th standard, and I do not have enough knowledge about math functions. LibFalcon is distributed under the BSD license; see the accompanying LICENSE file for more information.</p>
+<p><a href="https://github.com/Zefyer/LibFalcon">LibFalcon</a> is a simple (and incomplete) C library to be linked with Hobby Operating System Kernels. Almost all essential functions required by kernels are provided. (memcpy, strlen, atoi, etc.) However, there are No math functions at this moment. The reason is that I am in 9th standard, and I do not have enough knowledge about math functions. LibFalcon is distributed under the BSD license; see the accompanying LICENSE file for more information.</p>
 
 <h2>
 <a id="features-of-libfalcon" class="anchor" href="#features-of-libfalcon" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features of LibFalcon</h2>
@@ -83,7 +83,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">LibFalcon maintained by <a href="https://github.com/FlashySoft">FlashySoft</a></p>
+        <p class="copyright">LibFalcon maintained by <a href="https://github.com/Zefyer">Zefyer</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
